src/components/passphrase/safekeeping/safekeeping.css
@import '../../app/variables';

:root {
  --sub-title-color: var(--color-grayscale-dark);
  --address-color: var(--color-primary-medium);
  --address-animation-delay: 1200ms;
  --address-animation-duration: 1000ms;
  --header-animation-duration: 450ms;
  --second-header-animation-delay: 1000ms;
}

.table {
  width: 100%;
  height: 100%;
  display: table;

  & .tableCell {
    display: table-cell;
    vertical-align: middle;
  }
}

.hidden {
  display: none;
}

.smallSlider {
  margin: 40px auto;
  width: 220px !important;
}

.bigSlider {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 575px !important;
  transform: translateX(-50%) translateY(calc(-50% - 58px));
  z-index: 2;

  & label {
    & i:last-child {
      font-size: 24px !important;
    }
  }
}

.safekeeping {
  text-align: center;
  height: calc(100% - 22px);

  & > section {
    height: 50%;
  }

  & > header {
    height: 50%;
  }

  & header {
    font-size: 0.959em;

    & h2,
    & h5 {
      max-width: 750px;
      margin: 0 auto;
    }
  }

  /* Steps */
  &.introduction-step {
    & section.revealed,
    & section.revealing {
      display: none;
    }

    & > header {
      & h5 {
        font-size: 18px;
        width: 430px;
        line-height: 32px;
      }
    }

    & > section {
      border-top: solid 1px #f6f8fb;
      background: #f6f8fb;
      box-sizing: border-box;

      & h5 {
        max-width: 500px;
        margin: 0 auto;
      }
    }
  }

  &.revealing-step,
  &.done-step,
  &.revealed-step {
    & section.introduction {
      display: none;
    }

    & h5 {
      margin-top: 40px;
      color: var(--color-grayscale-dark);
    }
  }

  & .revealing {
    & .tableCell {
      position: relative;
    }

    & .textarea {
      width: 100%;
      height: 80px;
      background: transparent;
      padding: 0;
      text-shadow: 0px 0px 15px rgba(0, 0, 0, 1);
      color: rgba(0, 0, 0, 0);
      font-size: 0;
      line-height: 0;
      border: none;
      text-align: center;
      resize: none;
      outline: none !important;
      transition: all ease 400ms;
      transition-delay: 300ms;
      counter-reset: section;

      & .word {
        padding: 0 5px;
        position: relative;
        font-size: 26px;
        margin-top: 23px;
        display: inline-block;
        line-height: 30px;

        &::after {
          opacity: 0;
          position: absolute;
          top: 240%;
          left: 50%;
          color: var(--color-grayscale-light);
          font-size: 15px;
          counter-increment: section;
          content: counter(section);
          transition: all ease 400ms;
          -webkit-user-select: none;
        }
      }
    }

    & section.actionBar {
      pointer-events: none;
      visibility: hidden;
      text-align: center;

      & > div {
        margin: 60px auto 0;
      }
    }
  }

  &.done-step,
  &.revealed-step {
    & .bigSlider {
      display: none !important;
    }

    & .textarea {
      background: #f1f1f1;
      color: #000 !important;
      text-shadow: none !important;

      & .word::after {
        opacity: 1;
      }
    }

    & section.actionBar {
      visibility: visible;
      pointer-events: auto;
    }
  }
}

@media (--small-viewport) {
  .safekeeping {
    &.revealing-step,
    &.revealed-step {
      overflow-y: scroll;

      & > header {
        height: auto;
        padding-top: 40px;
        padding-bottom: 20px;

        & > h2 {
          padding-bottom: 0;
        }

        & h5 {
          margin-top: 20px;
        }
      }
    }

    & section.revealing {
      height: auto;
      display: block;
      padding-bottom: 50px;

      & .tableCell {
        display: block;
      }

      & .textarea {
        height: auto;
        width: 140px;
        margin: 0 auto;
      }

      & .word {
        display: block !important;
        clear: both;
        padding-bottom: 20px !important;
        margin-top: 10px !important;

        &::after {
          left: 180px !important;
          top: auto !important;
        }
      }
    }

    & .bigSlider,
    & .smallSlider {
      & label {
        height: 48px;
        line-height: 48px;
      }

      & div span {
        font-weight: normal;
        text-indent: 53px;
      }
    }

    & .smallSlider label {
      width: 180px;
    }

    & .bigSlider label {
      width: 330px;
    }
  }
}

